Fix row/column gap bug for firefox

--- a/src/styles/partials/_bottomContainer.scss
+++ b/src/styles/partials/_bottomContainer.scss
@@ -70,8 +70,8 @@
       grid-template-areas:
         'box1 box1'
         'box2 box3';
-      row-gap: 60px;
-      column-gap: 60px;
+      grid-row-gap: 60px;
+      grid-column-gap: 60px;
     }
 
     &__box {
